added html, normolize, styles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>vlad-homework-3</title>
+    <link rel="stylesheet" href="css/normolize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1 class="visually-hidden">vlad-homework-3</h1>
+      <!--header-->
+      <header class="main-header">
+        <nav class="main-nav">
+          <ul class="main-menu">
+            <li class="main-menu-item">
+              <a href="#lifestyle" class="main-menu-link">Lifestyle</a>
+            </li>
+            <li class="main-menu-item">
+              <a href="#photodiary" class="main-menu-link">Photodiary</a>
+            </li>
+            <li class="main-menu-item">
+              <a href="#music" class="main-menu-link">Music</a>
+            </li>
+            <li class="main-menu-item">
+              <a href="#travel" class="main-menu-link">Travel</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <!--main-->
+      <main class="main-content">
+        <div class="wrapper">
+          <ul class="article-list">
+            <li class="article-item">
+              <article>
+                <img class="article-img" src="img/001.jpg" alt="lifystyle" width="420" />
+                <span class="main-menu-name">lifestyle</span>
+                <h2 class="life-style-title">
+                  More than just a music festival
+                </h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, aut officia rerum, aperiam harum blanditiis sequi
+                  commodi alias, suscipit fugiat ex nisi ipsum aspernatur sunt
+                  delectus repudiandae perferendis tempore reiciendis?
+                </p>
+              </article>
+            </li>
+            <li class="article-item">
+              <article>
+                <img class="article-img" src="img/002.jpg" alt="lifystyle" width="420" />
+                <span class="main-menu-name">lifestyle</span>
+                <h2 class="life-style-title">
+                  Life tastes better with coffee
+                </h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, aut officia rerum, aperiam harum blanditiis sequi
+                  commodi alias, suscipit fugiat ex nisi ipsum aspernatur sunt
+                  delectus repudiandae perferendis tempore reiciendis?
+                </p>
+              </article>
+            </li>
+            <li class="article-item">
+              <article>
+                <img class="article-img" src="img/003.jpg" alt="Photodairy" width="420" />
+                <span class="main-menu-name">Photodairy</span>
+                <h2 class="life-style-title">
+                  American dream
+                </h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, aut officia rerum, aperiam harum blanditiis sequi
+                  commodi alias, suscipit fugiat ex nisi ipsum aspernatur sunt
+                  delectus repudiandae perferendis tempore reiciendis?
+                </p>
+              </article>
+            </li>
+            <li class="article-item">
+              <article>
+                <img class="article-img" src="img/004.jpg" alt="Photodairy" width="420" />
+                <span class="main-menu-name">Photodairy</span>
+                <h2 class="life-style-title">
+                  A day exploring the Alps
+                </h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, aut officia rerum, aperiam harum blanditiis sequi
+                  commodi alias, suscipit fugiat ex nisi ipsum aspernatur sunt
+                  delectus repudiandae perferendis tempore reiciendis?
+                </p>
+              </article>
+            </li>
+            <li class="article-item">
+              <article>
+                <img class="article-img" src="img/005.jpg" alt="lifystyle" width="420" />
+                <span class="main-menu-name">lifestyle</span>
+                <h2 class="life-style-title">
+                  Top 10 songs for running
+                </h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, aut officia rerum, aperiam harum blanditiis sequi
+                  commodi alias, suscipit fugiat ex nisi ipsum aspernatur sunt
+                  delectus repudiandae perferendis tempore reiciendis?
+                </p>
+              </article>
+            </li>
+            <li class="article-item">
+              <article>
+                <img class="article-img" src="img/006.jpg" alt="lifystyle" width="420" />
+                <span class="main-menu-name">lifestyle</span>
+                <h2 class="life-style-title">
+                  Cold winter days
+                </h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, aut officia rerum, aperiam harum blanditiis sequi
+                  commodi alias, suscipit fugiat ex nisi ipsum aspernatur sunt
+                  delectus repudiandae perferendis tempore reiciendis?
+                </p>
+              </article>
+            </li>
+          </ul>
+
+          <button class="load-button">Load more</button>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
