--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>vlad-homework-3</title>
-    <link rel="stylesheet" href="css/normolize.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="css/normolize.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Ubuntu:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
+      rel="stylesheet"/>
+    <link rel="stylesheet" href="css/styles.css"/>
   </head>
   <body>
     <div class="wrapper">
@@ -38,7 +37,6 @@
       </header>
       <!--main-->
       <main class="main-content">
-        <div class="wrapper">
           <ul class="article-list">
             <li class="article-item">
               <article>
@@ -133,7 +131,6 @@
           </ul>
 
           <button class="load-button">Load more</button>
-        </div>
       </main>
     </div>
   </body>
